--- a/tex/assignment4.tex
+++ b/tex/assignment4.tex
@@ -18,15 +18,9 @@
 \usepackage[utf8]{inputenc}
 
 %MAIN Language the LAST one
-\usepackage[greek,english]{babel}
+\usepackage[english]{babel}
 
 %\usepackage{kerkis}
-
-%The teubner package extends the facilities offered by the CB Greek fonts
-%NOTE: This includes also the graphicx package!
-%NOTE: When the teubner package is loaded, command \cap (denoting set intersection) is overwritten
-%NOTE: TEUBNER.STY FILE HAS BEEN CHANGED A BIT IN LINES 255-257 WITH 3 REPLACEMENTS \cap -> \capt
-\usepackage{teubner}
 
 %Package for displaying math
 \usepackage{amsmath}
