add github link

--- a/tex/Template.lyx
+++ b/tex/Template.lyx
@@ -145,7 +145,7 @@ status open
 
 \backslash
 title{Parallel and Distributed Systems: Comparing pthreads, openCilk and
- Multicilk}
+ Multicilk }
 \end_layout
 
 \begin_layout Plain Layout
@@ -225,6 +225,15 @@ maketitle
 
 \begin_layout Section
 INTRODUCTION
+\end_layout
+
+\begin_layout Subsection
+Code
+\end_layout
+
+\begin_layout Standard
+You can find source code at https://github.com/anthonyisafk/Parallel-Distributed-
+Systems-part4 .
 \end_layout
 
 \begin_layout Subsection
